fix(video): 详情API支持type参数，避免VideoSeries和Video的ID冲突
SeriesController.getSeriesById 新增可选 type 查询参数：
- type=series：只查 series 表
- type=standalone：只查 video 表
- 不传 type：保持原有自动判断逻辑

向后兼容，前端请求详情时传入 type 即可避免 ID 冲突导致查错条目。